--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div data-role="page" id="Home">
   <div data-role="header">
-    <h3>Kapelle Guggernüll </h3>
+    <h3>Kapelle Guggernï¿½ll </h3>
 	
   </div>
 <div data-role="navbar">
@@ -23,15 +23,15 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
- <img src="img_0105.jpg" alt="text" style="max-width:100%;">
+ <img src="img_0105.JPG" alt="text" style="max-width:100%;">
  
   <article>
-     <h3> Die Kapelle Guggernüll freut sich, wenn du: </h3>
+     <h3> Die Kapelle Guggernï¿½ll freut sich, wenn du: </h3>
     </article>   
 
    <section>
    <ul>
-<li>zuhörst</li> 
+<li>zuhï¿½rst</li> 
 <li>mitschunkelst</li> 
 <li>mitsingst</li> 
 <li>das Tanzbein schwingst</li> 
@@ -45,7 +45,7 @@
  </section>
 </div> 
   <div data-role="footer">
-    <h3>Wir spielen gerne für euch</h3>
+    <h3>Wir spielen gerne fï¿½r euch</h3>
   </div>
 </div> 
 
@@ -53,7 +53,7 @@
 
 <div data-role="page" id="Musikanten">
   <div data-role="header">
-    <h3>Kapelle Guggernüll</h3>
+    <h3>Kapelle Guggernï¿½ll</h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -71,14 +71,14 @@
 </article>
   <section>
    <ul>
-<li>Georg Bühler, Handorgel</li>
-<li>Felix Calonder, Schwyzerörgeli</li>  
-<li>Erich Danuser, Schwyzerörgel</li>  
+<li>Georg Bï¿½hler, Handorgel</li>
+<li>Felix Calonder, Schwyzerï¿½rgeli</li>  
+<li>Erich Danuser, Schwyzerï¿½rgel</li>  
 <li>Werner Danuser, Saxophon</li> 
 <li>Arno Mettier, Klarinette (Kapellmeister)</li>
 <li>Renato Moser, Blasbass</li> 
 <li>Jonny Prader, Bassgeige und Tenorhorn</li>
-<li>Felix Voneschen, Schwyzerörgeli</li> 
+<li>Felix Voneschen, Schwyzerï¿½rgeli</li> 
 </ul>
  </section>   
   
@@ -87,13 +87,13 @@
 
 
   <div data-role="footer">
-    <h3>Wir spielen auch gerne für uns</h3>
+    <h3>Wir spielen auch gerne fï¿½r uns</h3>
   </div>
 </div> 
 
 <div data-role="page" id="Auftritte">
   <div data-role="header">
-    <h3>Kapelle Guggernüll </h3>
+    <h3>Kapelle Guggernï¿½ll </h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -107,12 +107,12 @@
   <div data-role="main" class="ui-content">
    <img src="img_0105.jpg" alt="text" style="max-width:100%;">
   <article>
-  <h3>Unsere öffentlichen Auftritte:</h3>
+  <h3>Unsere ï¿½ffentlichen Auftritte:</h3>
 
 </article>
    <section>
    <ul>
-<li>In den nächsten Wochen keine öffentlichen Auftritte</li> 
+<li>In den nï¿½chsten Wochen keine ï¿½ffentlichen Auftritte</li> 
 
 </ul>
  </section>   
@@ -121,13 +121,13 @@
 
 
   <div data-role="footer">
-    <h3>Wir spielen gerne für euch</h3>
+    <h3>Wir spielen gerne fï¿½r euch</h3>
   </div>
 </div> 
 
 <div data-role="page" id="Fanseite">
   <div data-role="header">
-    <h3>Kapelle Guggernüll </h3>
+    <h3>Kapelle Guggernï¿½ll </h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -144,14 +144,14 @@
     <h3>Fanseite:</h3>
 
    <p>
-Die Kapelle Guggernüll ist sich fast sicher, dass sie mindestens einen Fan hat. 
+Die Kapelle Guggernï¿½ll ist sich fast sicher, dass sie mindestens einen Fan hat. 
 Einen Fan-Club gibt es aber nicht. 
 </p>
 <p>
-Falls du als Sympathisant der Kapelle Guggernüll trotzdem per E-Mail informiert werden möchtest, wann und wo die 
-Kapelle öffentlich auftritt, kannst du uns ein E-Mail schreiben. 
+Falls du als Sympathisant der Kapelle Guggernï¿½ll trotzdem per E-Mail informiert werden mï¿½chtest, wann und wo die 
+Kapelle ï¿½ffentlich auftritt, kannst du uns ein E-Mail schreiben. 
 </p>
-<a href="mailto:werner.danuser@bluewin.ch?subject=Guggernüll&body=Ich möche informiert werden, wann und wo die Kapelle öffentlich auftritt.">werner.danuser@bluewin.ch</a>
+<a href="mailto:werner.danuser@bluewin.ch?subject=Guggernï¿½ll&body=Ich mï¿½che informiert werden, wann und wo die Kapelle ï¿½ffentlich auftritt.">werner.danuser@bluewin.ch</a>
 </br>
 </br>
  </section>
@@ -159,13 +159,13 @@ Kapelle öffentlich auftritt, kannst du uns ein E-Mail schreiben.
 
 
   <div data-role="footer">
-    <h3>Wir spielen gerne für euch</h3>
+    <h3>Wir spielen gerne fï¿½r euch</h3>
   </div>
 </div> 
 
 <div data-role="page" id="Kontakt">
   <div data-role="header">
-     <h3>Kapelle Guggernüll </h3>
+     <h3>Kapelle Guggernï¿½ll </h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -180,7 +180,7 @@ Kapelle öffentlich auftritt, kannst du uns ein E-Mail schreiben.
   <div data-role="main" class="ui-content">
    <img src="img_0105.jpg" alt="text" style="max-width:100%;">
    <article>
-  <h3>Hast du Fragen oder möchtst du uns engagieren?</h3>
+  <h3>Hast du Fragen oder mï¿½chtst du uns engagieren?</h3>
 
      <section>
    <p>
@@ -197,7 +197,7 @@ E-Mail:
 
 
   <div data-role="footer">
-    <h3>Wir spielen gerne für euch</h3>
+    <h3>Wir spielen gerne fï¿½r euch</h3>
   </div>
 </div> 
 
