--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div data-role="page" id="Home">
   <div data-role="header">
-    <h3>Kapelle Guggern&uuml;ll </h3>
+    <h3>Kapelle Guggern&uuml;ll</h3>
 	
   </div>
 <div data-role="navbar">
@@ -57,7 +57,7 @@
 <div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
-      <li><a href="#Musikanten">Musikanten</a></li>
+      <li><a href="#Kapelle">Musikanten</a></li>
 	  <li><a href="#Fanseite">Fanseite</a></li>
 	  <li><a href="#Kontakt">Kontakt</a></li>
     </ul>
@@ -92,7 +92,7 @@
 
 <div data-role="page" id="Fanseite">
   <div data-role="header">
-    <h3>Kapelle Guggern&uuml;ll </h3>
+    <h3>Kapelle Guggern&uuml;ll</h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -129,7 +129,7 @@ Kapelle &ouml;ffentlich auftritt, kannst du uns ein E-Mail schreiben.
 
 <div data-role="page" id="Kontakt">
   <div data-role="header">
-     <h3>Kapelle Guggern&uuml;ll </h3>
+     <h3>Kapelle Guggern&uuml;ll</h3>
   </div>
 <div data-role="navbar">
     <ul>
