--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <div data-role="page" id="Home">
   <div data-role="header">
-    <h3>Kapelle Guggern&uuml;ll</h3>
+    <h2>Kapelle Guggern&uuml;ll</h2>
 	
   </div>
 <div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
-      <li><a href="#Musikanten">Musikanten</a></li>
+      <li><a href="#Musikanten">Kapelle</a></li>
 	  <li><a href="#Fanseite">Fanseite</a></li>
 	  <li><a href="#Kontakt">Kontakt</a></li>
     </ul>
@@ -44,7 +44,7 @@
  </section>
 </div> 
   <div data-role="footer">
-    <h3>Wir spielen gerne f&uuml;r euch</h3>
+    <h2>Wir spielen gerne f&uuml;r euch</h2>
   </div>
 </div> 
 
@@ -52,12 +52,12 @@
 
 <div data-role="page" id="Musikanten">
   <div data-role="header">
-    <h3>Kapelle Guggern&uuml;ll</h3>
+    <h2>Kapelle Guggern&uuml;ll</h2>
   </div>
 <div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
-      <li><a href="#Kapelle">Musikanten</a></li>
+      <li><a href="#Musikanten">Kapelle</a></li>
 	  <li><a href="#Fanseite">Fanseite</a></li>
 	  <li><a href="#Kontakt">Kontakt</a></li>
     </ul>
@@ -85,19 +85,19 @@
 
 
   <div data-role="footer">
-    <h3>Wir spielen auch gerne f&uuml;r uns</h3>
+    <h2>Wir spielen auch gerne f&uuml;r uns</h2>
   </div>
 </div> 
 
 
 <div data-role="page" id="Fanseite">
   <div data-role="header">
-    <h3>Kapelle Guggern&uuml;ll</h3>
+    <h2>Kapelle Guggern&uuml;ll</h2>
   </div>
 <div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
-      <li><a href="#Musikanten">Musikanten</a></li>
+      <li><a href="#Musikanten">Kapelle</a></li>
 	  <li><a href="#Fanseite">Fanseite</a></li>
 	  <li><a href="#Kontakt">Kontakt</a></li>
     </ul>
@@ -123,19 +123,19 @@ Kapelle &ouml;ffentlich auftritt, kannst du uns ein E-Mail schreiben.
 
 
   <div data-role="footer">
-    <h3>Wir spielen gerne f&uuml;r euch</h3>
+    <h2>Wir spielen gerne f&uuml;r euch</h2>
   </div>
 </div> 
 
 <div data-role="page" id="Kontakt">
   <div data-role="header">
-     <h3>Kapelle Guggern&uuml;ll</h3>
+     <h2>Kapelle Guggern&uuml;ll</h2>
   </div>
 <div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
 
-      <li><a href="#Musikanten">Musikanten</a></li>
+      <li><a href="#Musikanten">Kapelle</a></li>
 	  <li><a href="#Fanseite">Fanseite</a></li>
 	  <li><a href="#Kontakt">Kontakt</a></li>
     </ul>
@@ -160,7 +160,7 @@ E-Mail:
 
 
   <div data-role="footer">
-    <h3>Wir spielen gerne f&uuml;r euch</h3>
+    <h2>Wir spielen gerne f&uuml;r euch</h2>
   </div>
 </div> 
 
