--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+
+<style type="text/css">
+<!--
+.ui-header{overflow:hidden;z-index:10;padding:0 1em;border-top-width:0}.ui-dialog-contain>
+/* ... Hier werden die Formate definiert ... */
+-->
+</style>
+
+
 </head>
 <body>
 
