--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
- <img src="img_0105.JPG" alt="text" style="max-width:100%;">
+ <img src="gugg.jpg" alt="text" style="max-width:100%;">
  
   <article>
      <h3> Die Kapelle Guggern&uuml;ll freut sich, wenn du: </h3>
