--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div data-role="page" id="Home">
   <div data-role="header">
-    <h2>Kapelle Guggern&uuml;ll</h2>
+    <h3>Guggern&uuml;ll</h3>
 	
   </div>
 <div data-role="navbar">
@@ -61,7 +61,7 @@
 
 <div data-role="page" id="Musikanten">
   <div data-role="header">
-    <h2>Kapelle Guggern&uuml;ll</h2>
+    <h3>Guggern&uuml;ll</h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -72,7 +72,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="img_0105.JPG" alt="text" style="max-width:100%;">
+   <img src="gugg.jpg" alt="text" style="max-width:100%;">
    <article>
   <h3>Die Musikanten:</h3>
 </article>
@@ -101,7 +101,7 @@
 
 <div data-role="page" id="Fanseite">
   <div data-role="header">
-    <h2>Kapelle Guggern&uuml;ll</h2>
+    <h3>Guggern&uuml;ll</h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -112,7 +112,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="img_0105.JPG" alt="text" style="max-width:100%;">
+   <img src="gugg.jpg" alt="text" style="max-width:100%;">
    <section>
     <h3>Fanseite:</h3>
 
@@ -138,7 +138,7 @@ Kapelle &ouml;ffentlich auftritt, kannst du uns ein E-Mail schreiben.
 
 <div data-role="page" id="Kontakt">
   <div data-role="header">
-     <h2>Kapelle Guggern&uuml;ll</h2>
+     <h3>Guggern&uuml;ll</h3>
   </div>
 <div data-role="navbar">
     <ul>
@@ -150,7 +150,7 @@ Kapelle &ouml;ffentlich auftritt, kannst du uns ein E-Mail schreiben.
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="img_0105.JPG" alt="text" style="max-width:100%;">
+   <img src="gugg.jpg" alt="text" style="max-width:100%;">
    <article>
   <h3>Hast du Fragen oder m&ouml;chtst du uns engagieren?</h3>
 
