--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 <li>mitschunkelst</li> 
 <li>mitsingst</li> 
 <li>das Tanzbein schwingst</li> 
-<li>nicht pfeiffst</li> 
 <li>applaudierst</li> 
-<li>eine Runde spendierst</li> 
 <li>zufrieden die Gage bezahlst</li>
 <li>uns weiterempfiehlst</li> 
 <li>uns nochmals engagierst</li> 
@@ -82,9 +80,9 @@
 <li>Felix Calonder, Schwyzer&ouml;rgeli</li>  
 <li>Erich Danuser, Schwyzer&ouml;rgel</li>  
 <li>Werner Danuser, Saxophon</li> 
-<li>Arno Mettier, Klarinette (Kapellmeister)</li>
+<li>Arno Mettier, Klarinette</li>
 <li>Renato Moser, Blasbass</li> 
-<li>Jonny Prader, Streichbass und Horn</li>
+<li>Jonny Prader, Bassg. und Horn</li>
 <li>Felix Voneschen, Schwyzer&ouml;rgeli</li> 
 </ul>
  </section>   
@@ -117,8 +115,8 @@
     <h3>Fanseite:</h3>
 
    <p>
-Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle Guggern&uuml;ll trotzdem per E-Mail informiert werden m&ouml;chtest, wann und wo die 
-Kapelle &ouml;ffentlich auftritt, kannst du uns ein E-Mail schreiben. 
+Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail informiert werden m&ouml;chtest, wann und wo wir 
+&ouml;ffentlich auftreten, kannst du uns ein E-Mail schreiben. 
 </p>
 <a href="mailto:werner.danuser@bluewin.ch?subject=Guggern&uuml;ll&body=Ich m&ouml;che informiert werden, wann und wo die Kapelle &ouml;ffentlich auftritt.">werner.danuser@bluewin.ch</a>
 </br>
