--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
    <ul>
 <li>Georg B&uuml;hler, Handorgel</li>
 <li>Felix Calonder, Schwyzer&ouml;rgeli</li>  
-<li>Erich Danuser, Schwyzer&ouml;rgel</li>  
+<li>Erich Danuser, Schwyzer&ouml;rgeli</li>  
 <li>Werner Danuser, Saxophon</li> 
 <li>Arno Mettier, Klarinette</li>
 <li>Renato Moser, Blasbass</li> 
