--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Kapelle Guggernuell Felsberg</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Kapelle Guggernuell Felsberg">
+<meta name="keywords" content="Kapelle, Guggernuell, Felsberg, Volksmusik">
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
