--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div data-role="page" id="Home">
   <div data-role="header">
-    <h3>Guggern&uuml;ll</h3>
+    <h1>Guggern&uuml;ll</h1>
 	
   </div>
 <div data-role="navbar">
@@ -34,7 +34,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
- <img src="gugg.jpg" alt="text" style="max-width:100%;">
+ <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
  
   <article>
      <h3> Wir freuen uns, wenn du: </h3>
@@ -62,7 +62,7 @@
 
 <div data-role="page" id="Musikanten">
   <div data-role="header">
-    <h3>Guggern&uuml;ll</h3>
+    <h1>Guggern&uuml;ll</h1>
   </div>
 <div data-role="navbar">
     <ul>
@@ -73,7 +73,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg.jpg" alt="text" style="max-width:100%;">
+   <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <article>
   <h3>Die Musikanten:</h3>
 </article>
@@ -102,7 +102,7 @@
 
 <div data-role="page" id="Fanseite">
   <div data-role="header">
-    <h3>Guggern&uuml;ll</h3>
+    <h1>Guggern&uuml;ll</h1>
   </div>
 <div data-role="navbar">
     <ul>
@@ -113,7 +113,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg.jpg" alt="text" style="max-width:100%;">
+   <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <section>
     <h3>Fanseite:</h3>
 
@@ -134,8 +134,7 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
 
 <div data-role="page" id="Kontakt">
   <div data-role="header">
-     <h3>Guggern&uuml;ll</h3>
-  </div>
+     <h1>Guggern&uuml;ll</h1
 <div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
@@ -146,7 +145,7 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg.jpg" alt="text" style="max-width:100%;">
+   <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <article>
   <h3>Hast du Fragen oder m&ouml;chtst du uns engagieren?</h3>
 
