--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
    </div>
   <div data-role="main" class="ui-content">
    <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
-   <article>
+   <section>
   <h3>Hast du Fragen oder m&ouml;chtst du uns engagieren?</h3>
 
    <p>
@@ -158,7 +158,7 @@ E-Mail:
 <a href="mailto:arnomettier@bluewin.ch">arnomettier@bluewin.ch</a>
 </p>
  
-</article>
+</section>
   </div>
 
 
