--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
 <div data-role="page" id="Kontakt">
   <div data-role="header">
      <h1>Guggern&uuml;ll</h1>
+     </div>
 <div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
