--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
+   <img src="gugg2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <article>
   <h3>Die Musikanten:</h3>
 </article>
@@ -146,7 +146,7 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
+   <img src="gugg2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <section>
   <h3>Hast du Fragen oder m&ouml;chtst du uns engagieren?</h3>
 
