--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
- <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
+ <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
  
   <article>
      <h3> Wir freuen uns, wenn du: </h3>
@@ -48,7 +48,7 @@
 <li>das Tanzbein schwingst</li> 
 <li>applaudierst</li> 
 <li>zufrieden die Gage bezahlst</li>
-<li>uns weiterempfiehlst</li> 
+r<li>uns weiterempfiehlst</li> 
  
 </ul>
  </section>
@@ -73,7 +73,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
+   <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <article>
   <h3>Die Musikanten:</h3>
 </article>
@@ -85,7 +85,7 @@
 <li>Arno Mettier, Klarinette</li>
 <li>Renato Moser, Blasbass</li> 
 <li>Felix Voneschen, Schwyzer&ouml;rgeli</li> 
-</ul>
+r</ul>
  </section>   
   
   
@@ -111,7 +111,7 @@
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
+   <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <section>
     <h3>Fanseite:</h3>
 
@@ -144,7 +144,7 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
     </ul>
    </div>
   <div data-role="main" class="ui-content">
-   <img src="gugg2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
+   <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
    <section>
   <h3>Hast du Fragen oder m&ouml;chtst du uns engagieren?</h3>
 
