--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 </style>
 
 
-</head>
-<body>
+</head><body>
 
 <div data-role="page" id="Home">
   <div data-role="header">
@@ -48,7 +47,7 @@
 <li>das Tanzbein schwingst</li> 
 <li>applaudierst</li> 
 <li>zufrieden die Gage bezahlst</li>
-r<li>uns weiterempfiehlst</li> 
+<li>uns weiterempfiehlst</li> 
  
 </ul>
  </section>
@@ -85,7 +84,7 @@ r<li>uns weiterempfiehlst</li>
 <li>Arno Mettier, Klarinette</li>
 <li>Renato Moser, Blasbass</li> 
 <li>Felix Voneschen, Schwyzer&ouml;rgeli</li> 
-r</ul>
+</ul>
  </section>   
   
   
