--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div data-role="page" id="Home">
   <div data-role="header">
-    <h1>Guggern&uuml;ll</h1>
+    <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
 	
   </div>
 <div data-role="navbar">
