--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <div data-role="page" id="Musikanten">
   <div data-role="header">
-    <h1>Guggern&uuml;ll</h1>
+    <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
   </div>
 <div data-role="navbar">
     <ul>
@@ -99,7 +99,7 @@
 
 <div data-role="page" id="Fanseite">
   <div data-role="header">
-    <h1>Guggern&uuml;ll</h1>
+    <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
   </div>
 <div data-role="navbar">
     <ul>
@@ -131,9 +131,9 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
 
 <div data-role="page" id="Kontakt">
   <div data-role="header">
-     <h1>Guggern&uuml;ll</h1>
+     <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
      </div>
-<div data-role="navbar">
+<div data-role="navbar"><h1>Kapelle Guggern&uuml;ll Felsberg</h1>
     <ul>
       <li><a href="#Home">Home</a></li>
 
