--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
   <div data-role="header">
      <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
      </div>
-<div data-role="navbar"><h1>Kapelle Guggern&uuml;ll Felsberg</h1>
+<div data-role="navbar">
     <ul>
       <li><a href="#Home">Home</a></li>
 
