--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
 </article>
   <section>
    <ul>
-<li>Felix Calonder, Schwyzer&ouml;rgeli</li>  
 <li>Erich Danuser, Schwyzer&ouml;rgeli</li>  
-<li>Werner Danuser, Saxophon</li> 
-<li>Arno Mettier, Klarinette</li>
+<li>Werner Danuser, Saxophon</li>
+<li>Walter Mengelt, Handorgel</li>
 <li>Renato Moser, Blasbass</li> 
 <li>Felix Voneschen, Schwyzer&ouml;rgeli</li> 
 </ul>
@@ -148,12 +147,12 @@ Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail i
   <h3>Hast du Fragen oder m&ouml;chtst du uns engagieren?</h3>
 
    <p>
-Arno Mettier </br>
-Montalinstrasse 6</br>
+Werner Danuser </br>
+Taminserstrasse 28</br>
 7012 Felsberg </br>
-Tel. 	081 252 35 13 </br>
+Tel. 	081 252 70 51 </br>
 E-Mail:	
-<a href="mailto:arnomettier@bluewin.ch">arnomettier@bluewin.ch</a>
+<a href="mailto:werner.danuser@bluewin.ch">werner.danuser@bluewin.ch</a>
 </p>
  
 </section>
