--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
 <head>
 <title>Kapelle Guggernuell Felsberg</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Kapelle Guggernuell Felsberg">
-<meta name="keywords" content="Kapelle, Guggernuell, Felsberg, Volksmusik">
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
@@ -24,144 +21,19 @@
     <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
 	
   </div>
-<div data-role="navbar">
-    <ul>
-      <li><a href="#Home">Home</a></li>
-      <li><a href="#Musikanten">Kapelle</a></li>
-	  <li><a href="#Fanseite">Fanseite</a></li>
-	  <li><a href="#Kontakt">Kontakt</a></li>
-    </ul>
-   </div>
+
   <div data-role="main" class="ui-content">
- <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
+ 
  
   <article>
-     <h3> Wir freuen uns, wenn du: </h3>
+     <h3> Diese Seite wird nicht mehr unterhalten </h3>
     </article>   
 
-   <section>
-   <ul>
-<li>zuh&ouml;rst</li> 
-<li>mitschunkelst</li> 
-<li>mitsingst</li> 
-<li>das Tanzbein schwingst</li> 
-<li>applaudierst</li> 
-<li>zufrieden die Gage bezahlst</li>
-<li>uns weiterempfiehlst</li> 
- 
-</ul>
- </section>
-</div> 
-  <div data-role="footer">
-    <h2>Wir spielen gerne f&uuml;r euch</h2>
-  </div>
-</div> 
 
 
 
-<div data-role="page" id="Musikanten">
-  <div data-role="header">
-    <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
-  </div>
-<div data-role="navbar">
-    <ul>
-      <li><a href="#Home">Home</a></li>
-      <li><a href="#Musikanten">Kapelle</a></li>
-	  <li><a href="#Fanseite">Fanseite</a></li>
-	  <li><a href="#Kontakt">Kontakt</a></li>
-    </ul>
-   </div>
-  <div data-role="main" class="ui-content">
-   <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
-   <article>
-  <h3>Die Musikanten:</h3>
-</article>
-  <section>
-   <ul>
-<li>Erich Danuser, Schwyzer&ouml;rgeli</li>  
-<li>Werner Danuser, Saxophon</li>
-<li>Walter Mengelt, Handorgel</li>
-<li>Renato Moser, Blasbass</li> 
-<li>Felix Voneschen, Schwyzer&ouml;rgeli</li> 
-</ul>
- </section>   
-  
-  
-  </div>
 
 
-  <div data-role="footer">
-    <h2>Wir spielen auch gerne f&uuml;r uns</h2>
-  </div>
-</div> 
 
-
-<div data-role="page" id="Fanseite">
-  <div data-role="header">
-    <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
-  </div>
-<div data-role="navbar">
-    <ul>
-      <li><a href="#Home">Home</a></li>
-      <li><a href="#Musikanten">Kapelle</a></li>
-	  <li><a href="#Fanseite">Fanseite</a></li>
-	  <li><a href="#Kontakt">Kontakt</a></li>
-    </ul>
-   </div>
-  <div data-role="main" class="ui-content">
-   <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
-   <section>
-    <h3>Fanseite:</h3>
-
-   <p>
-Einen Fan-Club gibt es nicht. Falls du als Sympathisant der Kapelle per E-Mail informiert werden m&ouml;chtest, wann und wo wir 
-&ouml;ffentlich auftreten, kannst du uns ein E-Mail schreiben. 
-</p>
-<a href="mailto:werner.danuser@bluewin.ch?subject=Guggern&uuml;ll&body=Ich m&ouml;che informiert werden, wann und wo die Kapelle &ouml;ffentlich auftritt.">werner.danuser@bluewin.ch</a>
-</br>
- </section>
-  </div>
-
-
-  <div data-role="footer">
-    <h2>Wir spielen gerne f&uuml;r euch</h2>
-  </div>
-</div> 
-
-<div data-role="page" id="Kontakt">
-  <div data-role="header">
-     <h1>Kapelle Guggern&uuml;ll Felsberg</h1>
-     </div>
-<div data-role="navbar">
-    <ul>
-      <li><a href="#Home">Home</a></li>
-
-      <li><a href="#Musikanten">Kapelle</a></li>
-	  <li><a href="#Fanseite">Fanseite</a></li>
-	  <li><a href="#Kontakt">Kontakt</a></li>
-    </ul>
-   </div>
-  <div data-role="main" class="ui-content">
-   <img src="gugger2.jpg" alt="Kapelle Guggernuell Felsberg" style="max-width:100%;">
-   <section>
-  <h3>Hast du Fragen oder m&ouml;chtst du uns engagieren?</h3>
-
-   <p>
-Werner Danuser </br>
-Taminserstrasse 28</br>
-7012 Felsberg </br>
-Tel. 	081 252 70 51 </br>
-E-Mail:	
-<a href="mailto:werner.danuser@bluewin.ch">werner.danuser@bluewin.ch</a>
-</p>
- 
-</section>
-  </div>
-
-
-  <div data-role="footer">
-    <h2>Wir spielen gerne f&uuml;r euch</h2>
-  </div>
-</div> 
 
 </body>
